# ChangeLog for dev-ruby/rev
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Aug 2010; Hans de Graaff <graaff@gentoo.org> -rev-0.3.1.ebuild:
  Remove old version.

*rev-0.3.2 (18 Jan 2010)

  18 Jan 2010; Hans de Graaff <graaff@gentoo.org> +rev-0.3.2.ebuild:
  Version bump. Convert to ruby-fakegem.

*rev-0.3.1 (09 Dec 2009)

  09 Dec 2009; Hans de Graaff <graaff@gentoo.org> +rev-0.3.1.ebuild,
  +metadata.xml:
  Initial import.
