@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST rev-0.3.2.gem 89088 RMD160 1eb5d8e579d14be624a9b275baeb5052af825c4a SHA1 806ed94999e157e524fed5d7f1bd14d73b536a2e SHA256 c711d8f7022df8412980a6b3ec2c2be24de640f9d46d6c72addb516d530d68c9
-EBUILD rev-0.3.2.ebuild 1233 RMD160 7a6c152650fb6249cc53ae9477e43ba9b3e9c511 SHA1 b888c167434d454ffc2d0a29d3f414144e6f9377 SHA256 da6269b9983f5e5bcbb3fe6bbf3c9c7eb267b4670edcdd311272b40b2fd9ee96
-MISC ChangeLog 473 RMD160 02eb47558360f9199ce23b7f82269cbc8eca723c SHA1 a21d588da66fff1d689a27df2c620e21dcd020be SHA256 7574820e8592b5fa1fa26f20739a9e087117d5a808fa36a53cd4ea6a0cffc73d
+EBUILD rev-0.3.2.ebuild 1549 RMD160 388abc17ee36158b9149affd68b1c4b10f59b48a SHA1 5243fc46bb4d2ee0c374b4ef06c4164c047140cf SHA256 0dbbe2f972c8cd45f7c5b4d35f243dc510015f499a9940bb228b83e480951f86
+MISC ChangeLog 686 RMD160 304d97c12848a21cb04de400e29f823f0c0f9096 SHA1 78949cf6a20af025819ba26c277aa2fe8d0070af SHA256 7c97d5c7559f7406107caba2323e4564e9efb2f4d96154ce2401008578beb5c7
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkxaza4ACgkQZihJkut28StpDgD/b212u815aLcYrl/h7G23np0k
-z4ABadYJg0XSgiBNxJABAKKthO+1oPY9xgoxUSnr0X7VkjlnWA3SMBt70wnFFaGE
-=WtPC
+iF4EAREIAAYFAky7FxMACgkQZihJkut28SuDbAEAg0jElEaEAOU+DWc2rJmzfNcF
+TnZAMRFLY3v8/Y2/oskA/A7PecxIZ3hwGxyzKftkhv8zAR6nug7GLjLONemc2bS7
+=B1dI
 -----END PGP SIGNATURE-----
