@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Oct 2010; Hans de Graaff <graaff@gentoo.org> rev-0.3.2.ebuild,
+  metadata.xml:
+  Fix building with a ruby with --no-undefined linker flag by ignoring it.
+  Symbols are loaded through ruby's openssl binding.
+
   05 Aug 2010; Hans de Graaff <graaff@gentoo.org> -rev-0.3.1.ebuild:
   Remove old version.
 
